--- a/DocumentsApp/backend/doc-backend/build.gradle
+++ b/DocumentsApp/backend/doc-backend/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 }
 
 application {
-    mainClassName = 'com.example.docbackend.DemoApplication'
+    mainClassName = 'com.DemoApplication'
 }
 
 tasks.named('test') {
